syntax = "proto3";

package appointment;

message BusinessUserService {
  string id = 1; 
  string BusinessUserId = 2;
  string BusinessServiceId = 3;
  bool IsActive = 4;
}

message BusinessUserServiceCreateModel { 
  string BusinessUserId = 1;
  string BusinessServiceId = 2;
  bool IsActive = 3;
}

message BusinessUserServiceGetByIdModel {
    string id = 1; 
}

message BusinessUserServiceGetByIdResponse {
  string id = 1; 
  string BusinessUserId = 2;
  string BusinessServiceId = 3;
  bool IsActive = 4;
}

message BusinessUserServiceCreateResponse {
  string id = 1; 
  string BusinessUserId = 2;
  string BusinessServiceId = 3;
  bool IsActive = 4;
}

message BusinessUserServiceUpdateModel {
  string id = 1; 
  string BusinessUserId = 2;
  string BusinessServiceId = 3;
  bool IsActive = 4;
  }

message BusinessUserServiceUpdateResponse {
  string id = 1; 
  string BusinessUserId = 2;
  string BusinessServiceId = 3;
  bool IsActive = 4;
}

message BusinessUserServiceSearchModel {
  string businessUserId = 1;
  string businessServiceId = 2;
  bool isActive = 3;
}

message BusinessUserServiceSearchResponse {
  string id = 1; 
  string BusinessUserId = 2;
  string BusinessServiceId = 3;
  bool IsActive = 4;
}

message BusinessUserServiceDeleteModel {
    string id = 1;
}

  message BusinessUserServiceDeleteResponse {
    string id = 1;
}

service BusinessUserServices {
    rpc Create(BusinessUserServiceCreateModel) returns (BusinessUserServiceCreateResponse);
    rpc GetById(BusinessUserServiceGetByIdModel) returns (BusinessUserServiceGetByIdResponse) {};
    rpc Search(BusinessUserServiceSearchModel) returns (BusinessUserServiceSearchResponse) {};
    rpc Update(BusinessUserServiceUpdateModel) returns (BusinessUserServiceUpdateResponse) {};
    rpc Delete(BusinessUserServiceDeleteModel) returns (BusinessUserServiceDeleteResponse) {};

}